fixed the truncated footer by switching to mega-footer

--- a/djmanager/static/style/MDL-style.css
+++ b/djmanager/static/style/MDL-style.css
@@ -31,11 +31,13 @@
 /* Change the layout__content class to Flex (instead of inline-block) to allow spacer to work. */
 .mdl-layout__content {
     /* display: -webkit-flex; */
-    /* display: flex; */
+    display: flex;
     /* -webkit-flex-direction: column; */
-    /* flex-direction: column; */
+    flex-direction: column;
     /* position: relative; */
     /* top: -148px; */
+    justify-content: space-between;
+    /* overflow: hidden; */
 }
 
 header#djpsych-header{
